--- a/launch-service/launchservice-prod.yml
+++ b/launch-service/launchservice-prod.yml
@@ -10,6 +10,6 @@ spring:
       dialect: org.hibernate.dialect.SQLServer2012Dialect
   datasource:
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url: jdbc:sqlserver://192.168.1.203;databaseName=launch_db
+    url: jdbc:sqlserver://192.168.1.203;databaseName=mservice_db
     username: rathish
     password: r@th15h
