--- a/launch-service/launchservice-prod.yml
+++ b/launch-service/launchservice-prod.yml
@@ -9,6 +9,6 @@ spring:
       ddl-auto: update
   datasource:
     driver-class-name: net.sourceforge.jtds.jdbc.Driver
-    url: jdbc:jtds:sqlserver://localhost:1433;databaseName=mservice_db;instance=SQLServer2014;
+    url: jdbc:jtds:sqlserver://192.168.1.203:1433;databaseName=mservice_db
     username: rathish
     password: r@th15h
