--- a/launch-service/launchservice-prod.yml
+++ b/launch-service/launchservice-prod.yml
@@ -8,6 +8,8 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
+    hikari:
+      connection-test-query: SELECT 1
     driver-class-name: net.sourceforge.jtds.jdbc.Driver
     url: jdbc:jtds:sqlserver://192.168.1.203:1433;databaseName=mservice_db
     username: rathish
