--- a/lms-service/bpm-service-dev.yml
+++ b/lms-service/bpm-service-dev.yml
@@ -6,3 +6,8 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8070/eureka/
+camunda:
+  bpm:
+    admin-user:
+      id: rathish
+      password: rathish123
