--- a/lms-service/eurekaserver.yml
+++ b/lms-service/eurekaserver.yml
@@ -10,3 +10,4 @@ eureka:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 5
+    eviction-interval-timer-in-ms: 1000
