--- a/lms-service/launch-service-dev.yml
+++ b/lms-service/launch-service-dev.yml
@@ -1,6 +1,7 @@
 eureka:
   instance:
     prefer-ip-address: true
+    lease-renewal-interval-in-seconds: 30
   client:
     fetch-registry: true
     register-with-eureka: true
