--- a/lms-service/bpm-service-dev.yml
+++ b/lms-service/bpm-service-dev.yml
@@ -4,6 +4,7 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
+    instance-info-replication-interval-seconds: 3
     service-url:
       defaultZone: http://localhost:8070/eureka/
 camunda:
