--- a/lms-service/launch-service-dev.yml
+++ b/lms-service/launch-service-dev.yml
@@ -4,5 +4,6 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
+    instance-info-replication-interval-seconds: 3
     service-url:
       defaultZone: http://localhost:8070/eureka/
