--- a/lms-service/eurekaserver.yml
+++ b/lms-service/eurekaserver.yml
@@ -6,6 +6,7 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    instance-info-replication-interval-seconds: 3
     service-url:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
   server:
