Configurations for LMS

--- a/lms-service/bpm-service-dev.yml
+++ b/lms-service/bpm-service-dev.yml
@@ -11,3 +11,8 @@ camunda:
     admin-user:
       id: rathish
       password: rathish123
+spring:
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
