--- a/lms-service/launch-service-dev.yml
+++ b/lms-service/launch-service-dev.yml
@@ -6,3 +6,8 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8070/eureka/
+spring:
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
